--- a/run_car_detec.ipynb
+++ b/run_car_detec.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "run_car_detec.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "mount_file_id": "1NXQVKzMFiaWw60R3oB8xChIl7sFCBcHr",
       "authorship_tag": "ABX9TyPMs/zN/UYL5fzZIWp6MjMh",
       "include_colab_link": true
